--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,11 @@ dependencies:
   collapsible_sidebar: ^2.0.5+1
   flutter_bootstrap_widgets: ^1.1.0
   flutter_bootstrap: ^2.0.0
+  flutter_bloc: ^8.1.3
+  dio: ^5.2.1+1
+  retrofit: ^4.0.1
+  font_awesome_flutter: ^10.4.0
+  jiffy: ^6.2.1
   flutter:
     sdk: flutter
 
@@ -51,7 +56,9 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^2.0.1
+  build_runner: ^2.4.5
+  retrofit_generator: ^7.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
